--- a/styles/app.css
+++ b/styles/app.css
@@ -1,14 +1,20 @@
+body {
+  background-color: green;
+
+}
+
 .card {
   float: left;
-  border: solid 1px black;
-  width: 100px;
+  box-shadow: 5px 5px 2px 2px #333;
+  width: 120px;
   border-radius: 5px;
-  height: 140px;
-  margin-right: 20px;
+  height: 167px;
+  margin: 0 20px 20px 0;
+  padding: 0;
 }
 
 .covered {
-  background-color: black;
+  background-image: url(../img/card-back.png);
 }
 
 .hand {
